[package]
name = "companion-wayland"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.12", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
rustix = { version = "1.1.4", features = ["shm"] }

libc = "0.2.186"